# madrid_pollution_project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: fct_no2_observations.sql  fct_no2_observations.yml  mart_station_daily.sql  mart_station_daily.yml
dbt/models/staging/: stg_air_quality.sql  stg_air_quality.yml  stg_stations.sql  stg_stations.yml  stg_weather.sql  stg_weather.yml
dbt/tests/: assert_fct_no2_observations_unique.sql  assert_int_station_hourly_unique.sql
infra/: docker-compose.yml
models/: model.pkl
notebooks/: EDA.ipynb  Models.ipynb  table_creation.ipynb
notebooks/legacy/: API_merged_df.ipynb  January_exploration.ipynb  analysis.ipynb
src/: API_merged_df.ipynb  EDA.ipynb  January_exploration.ipynb  Models.ipynb  analysis.ipynb  animated_heatmap.html  clean_data.parquet  exploration.ipynb  extract.py  predict.py  table_creation.ipynb  train.py  transform.py
src/madrid_pollution/: __init__.py  __main__.py  cli.py  config.py  logging.py  pipeline.py  reporting.py
src/madrid_pollution/data/: __init__.py  air_quality.py  http.py  stations.py  storage.py  weather.py
src/madrid_pollution/modeling/: __init__.py  backtest.py  features.py  metrics.py  prediction.py  training.py
tests/: connection_postgres.py  test_air_quality.py  test_backtest.py  test_cli.py  test_config.py  test_features.py  test_metrics.py  test_pipeline.py  test_prediction.py  test_stations.py  test_transform.py  test_weather.py
tests/fixtures/: air_quality_sample.csv  stations_sample.csv
